[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tofupilot"
version = "1.5.1"
authors = [{name = "Félix Berthier", email = "felix.berthier@tofupilot.com"}]
license = {text = "MIT"}
description = "The official Python client for the TofuPilot API"
keywords = ["automatic", "hardware", "testing", "tofupilot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = ["requests", "setuptools", "packaging", "pytest"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/tofupilot/python-client"

[project.entry-points]
pytest11 = {tofupilot = "tofupilot.plugin"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}
